# mom-bucks-backend

./: .firebaserc  .gitignore  CLAUDE.md  Makefile  README.md  firebase.json  firestore.indexes.json  firestore.rules  plan.md  skills-lock.json  storage.rules
.claude/skills/release/: skill.md
.github/instructions/: *.instructions.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  firebase-ci.yml
docs/: ci-and-tooling-proposal.md  firebase-migration-plan.md  migration-runbook.md  schema.md
docs/specs/: phase-5-flask-test-shim.md
docs/specs/2026-04-08-firebase-phase-4/: show-and-tell.md
docs/specs/2026-04-18-activities-refresh/: design.md
functions/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts  vitest.contract.config.ts
functions/src/: admin.ts  helloWorld.ts  index.ts
functions/src/backfill/: cli.ts  runBackfill.ts  transform.ts
functions/src/handlers/: acceptInvite.ts  claimActivity.ts  claimInterest.ts  createActivity.ts  deleteActivity.ts  depositToVault.ts  fanOutToParents.ts  getClaimableInterest.ts  (+13 more)
functions/test/: helloWorld.test.ts  smoke.test.ts
public/: index.html
scripts/: run-contract-tests.sh  run-rules-tests.sh  start-emulators.sh
tools/: pyproject.toml
tools/src/mb/: admin.py  cli.py  client.py
tools/src/mb/commands/: activities.py  admin.py  auth.py  children.py  invites.py  smoke_test.py  transactions.py  vault.py
tools/tests/: test_activities.py  test_admin.py  test_admin_cmd.py  test_auth.py  test_children.py  test_client.py  test_invites.py  test_vault.py
(+40 files in other folders)
