[project]
name = "mb"
version = "0.1.0"
description = "Mom Bucks CLI — Firebase backend utility and smoke test tool"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.0",
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
mb = "mb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mb"]
